--- a/style/module/navigation.css
+++ b/style/module/navigation.css
@@ -9,17 +9,24 @@
 
 @media (max-width: 768px) {
   .navigation__list {
-    padding: 16px 30px;
     margin: 0 auto;
     max-width: 740px;
+  }
+
+  .navigation__list_header {
+    padding: 16px 30px;
   }
 }
 
 @media (max-width: 480px) {
   .navigation__list {
-    padding: 16px 15px;
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  .navigation__list_header {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   .navigation__item:not(:last-child) {
